--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,7 +17,7 @@
     </style>
 
     <style name="CustomShowcaseTheme2" parent="ShowcaseView">
-        <item name="sv_backgroundColor">#e51249d9</item>
+        <item name="sv_backgroundColor">#25467A</item>
         <item name="sv_showcaseColor">#25467A</item>
         <item name="sv_buttonText">Close</item>
         <item name="sv_titleTextAppearance">@style/CustomTitle2</item>
@@ -28,6 +28,15 @@
         <item name="sv_backgroundColor">#c8ed680f</item>
         <item name="sv_showcaseColor">#ed680f</item>
         <item name="sv_buttonText">Hide</item>
+        <item name="sv_tintButtonColor">false</item>
+        <item name="sv_titleTextAppearance">@style/CustomTitle2</item>
+        <item name="sv_detailTextAppearance">@style/CustomText2</item>
+    </style>
+
+    <style name="CustomShowcaseTheme4" parent="ShowcaseView.Light">
+        <item name="sv_backgroundColor">#99000000</item>
+        <item name="sv_showcaseColor">#aaaa</item>
+        <item name="sv_buttonText">Скрыть</item>
         <item name="sv_tintButtonColor">false</item>
         <item name="sv_titleTextAppearance">@style/CustomTitle2</item>
         <item name="sv_detailTextAppearance">@style/CustomText2</item>
